--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -14,5 +14,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Setup package
+        run: |
+          python setup.py develop
       - name: Run tests with pytest
-        run: py.test -v
+        run: |
+          python py.test -v
