--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -18,5 +18,6 @@ jobs:
         run: |
           python setup.py develop
       - name: Run tests with pytest
-        run: |
-          demo_project pytest -v
+        run: | 
+          python print('test')
+          pytest
