--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -3,21 +3,16 @@ on: [push]
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Install Python 3
         uses: actions/setup-python@v1
         with:
-          python-version: 3.8
+          python-version: 3.6
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Setup package
-        run: |
-          python setup.py develop
       - name: Run tests with pytest
-        run: | 
-          python print('test')
-          pytest
+        run: pytest 
