--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -14,5 +14,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pytest
       - name: Run tests with pytest
         run: pytest 
