--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -18,3 +18,9 @@ jobs:
           python setup.py develop 
       - name: Run tests with pytest
         run: pytest 
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.xml
+          flags: unittests
