--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -15,9 +15,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest
+          pip install pytest-cov
           python setup.py develop 
       - name: Run tests with pytest
-        run: pytest 
+        run: pytest --cov=./ --cov-report=xml 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
