--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -18,7 +18,7 @@ jobs:
           pip install pytest-cov
           python setup.py develop 
       - name: Run tests with pytest
-        run: pytest --cov=./ --cov-report=xml 
+        run: pytest --cov=./src, ./tests --cov-report=xml 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
